--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>ALLES | GUTE</title>
+    <title>CSS Grid Testing</title>
     <link rel="icon" href="assets/img/favicon.ico" type="">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/purecss@0.6.2/build/pure-min.css" integrity="sha384-UQiGfs9ICog+LwheBSRCt1o5cbyKIHbwjWscjemyBMT9YCUMZffs6UqUTd0hObXD" crossorigin="anonymous">
@@ -25,87 +25,55 @@
 <body>
 
 <!-- Navigation -->
-<div class="menu">
-    <a class="menu__dropdown-link"><i class="fa fa-bars" aria-hidden="true"></i></a>
-    <ul class="menu__dropdown">
-        <li><a class="menu__dropdown__links" href="#">Best of</a></li>
-        <li><a class="menu__dropdown__links" href="#">Portraits</a></li>
-        <li><a class="menu__dropdown__links" href="#">Traveling</a></li>
-        <li><a class="menu__dropdown__links" href="#">Bands</a></li>
-        <li><a class="menu__dropdown__links" href="#">Videos</a></li>
-        <li><a class="menu__dropdown__links" href="#">Music</a></li>
-        <li><a class="menu__dropdown__links" href="about.html">About me</a></li>
-    </ul>
-</div>
+
 <!-- Navigation -->
 
 <!-- Header Section -->
 <section class="header">
-    <div class="header__headerPicture"></div>
-    <!-- Header Video -->
-    <div class="header__fullscreen">
-        <video class="header__fullscreen__headerVideo" autoplay loop>
-            <source src="assets/videos/Ma_vibes.mp4" type="video/mp4" />Your browser does not support the video tag. I suggest you upgrade your browser.
-            <source src="assets/videos/Ma_vibes.webm" type="video/webm" />Your browser does not support the video tag. I suggest you upgrade your browser.
-        </video>
-    </div>
+    <img class="image" src="assets/img/header.jpg" alt="header">
 </section>
+<!-- Header Section -->
 
 <!-- "Best of" Section -->
 <section class="best">
-    <div class="pure-g">
-        <div class="pure-u-1">
-                <img class="pure-img" src="assets/img/manmarket.jpg" alt="manmarket">
-        </div>
-        <div class="pure-u-1">
-                <img class="pure-img" src="assets/img/thaitypo.jpg" alt="thaitypo">
-        </div>
-        <div class="pure-u-1">
-                <img class="pure-img" src="assets/img/manmarket.jpg" alt="manmarket">
-        </div>
-        <div class="pure-u-1">
-                <img class="pure-img" src="assets/img/thaitypo.jpg" alt="thaitypo">
-        </div>
-        <div class="pure-u-1-2">
-            <div class="image image--small">
-                <img class="pure-img" src="assets/img/manmarket.jpg" alt="manmarket">
-            </div>
-        </div>
-        <div class="pure-u-1-2">
-            <div class="image image--small">
-                <img class="pure-img" src="assets/img/manmarket.jpg" alt="manmarket">
-            </div>
-        </div>
-    </div>
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
+    <img class="image" src="assets/img/manmarket.jpg" alt="manmarket">
 </section>
 <!-- "Best of" Section -->
-
-<!-- Navigation -->
-<!-- Mobile Burger Icon -->
-<!--<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>-->
-<!-- Mobile Burger Icon -->
-
-
-<!--<nav class="nav">-->
-    <!--<div class="nav__container">-->
-        <!--<ul class="nav__menu-links-container">-->
-            <!--<li><a class="nav__menu-links-container__links active" href="index.html">Best of</a></li>-->
-            <!--<li><a class="nav__menu-links-container__links" href="portraits.html">Portraits</a></li>-->
-            <!--<li><a class="nav__menu-links-container__links" href="traveling.html">Traveling</a></li>-->
-            <!--<li><a class="nav__menu-links-container__links" href="bands.html">Bands</a></li>-->
-            <!--<li><a class="nav__menu-links-container__links" href="videos.html">Videos</a></li>-->
-            <!--<li><a class="nav__menu-links-container__links" href="music.html">Music</a></li>-->
-            <!--<li><a class="nav__menu-links-container__links" href="about.html">About me</a></li>-->
-        <!--</ul>-->
-        <!--<ul class="sidenav__soMe-container">-->
-            <!--<li><a class="sidenav__soMe-container__links" href="https://www.facebook.com/christophkrakauerfotovideo" target="blank"><i class="fa fa-facebook fa-fw" aria-hidden="true"></i></a></li>-->
-            <!--<li><a class="sidenav__soMe-container__links" href="https://www.instagram.com/christoph_krakauer/" target="blank"><i class="fa fa-instagram fa-fw " aria-hidden="true"></i></a></li>-->
-            <!--&lt;!&ndash;<li><a class="sidenav__soMe-container__links" href="#"><i class="fa fa-youtube-play fa-fw " aria-hidden="true"></i></a></li>&ndash;&gt;-->
-            <!--<li><a class="sidenav__soMe-container__links" href="https://vimeo.com" target="blank"><i class="fa fa-vimeo-square fa-fw" aria-hidden="true"></i></a></li>-->
-        <!--</ul>-->
-    <!--</div>-->
-<!--</nav>-->
-
 </body>
 
 <script type="text/javascript" src="assets/js/jquery.js"></script>
